--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,5 +1,5 @@
 source "https://rubygems.org"
 
 gem "jekyll"
-gem "minima", git: "https://github.com/jekyll/minima"
+gem "minima"
 gem "kramdown-parser-gfm"
