--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
-baseurl: "" # the subpath of your site, e.g. /blog
+title: Just Site
+email: matyushag8907@gmail.com
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://xa4os34.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
